Clean up `index.html`

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<script type="text/javascript" src="main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Serpent by Alyssa Carter</title>
+    <script type="text/javascript" src="main.js"></script>
+  </head>
+
+  <body></body>
+</html>
