`Frames` effect and working toward user interaction

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="utf-8">
     <title>Serpent by Alyssa Carter</title>
     <script type="text/javascript" src="main.js"></script>
+    <style>
+      .game {
+        background-color: rgb(240, 200, 0);
+        width: 600;
+        height: 400;
+        position: absolute;
+        left: auto;
+      }
+    </style>
   </head>
 
-  <body></body>
+  <body>
+    <canvas class="game"></canvas>
+  </body>
 </html>
