Make canvas available to FFI

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
 
   <body>
-    <canvas class="game"></canvas>
+    <canvas class="game" id="snake_canvas"></canvas>
   </body>
 </html>
