--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Serpent by Alyssa Carter</title>
-    <script type="text/javascript" src="main.js"></script>
+    <script defer="defer" type="text/javascript" src="main.js"></script>
     <style>
       .game {
         background-color: rgb(240, 200, 0);
