--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
 
   <body>
-    <canvas class="game" id="snake_canvas"></canvas>
+    <canvas class="game" id="snake_canvas" width="600" height="400"></canvas>
   </body>
 </html>
