Load helper.js in index.html instead of including it in Main.idr

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Serpent by Alyssa Carter</title>
+    <script defer="defer" type="text/javascript" src="helper.js"></script>
     <script defer="defer" type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script defer="defer" type="text/javascript" src="helper.js"></script>
     <script defer="defer" type="text/javascript" src="main.js"></script>
